@@ -59,7 +59,7 @@
   <!-- advanced widgets -->
   <criterion name="c4" i18n:attributes="title">
    <property name="widget">checkbox</property>
-   <property name="title">Groups</property>
+   <property name="title">Group</property>
    <property name="position">top</property>
    <property name="section">advanced</property>
    <property name="hidden">0</property>
@@ -304,6 +304,26 @@
    <property name="operator_visible">0</property>
    <property
       name="vocabulary">Products.PloneMeeting.vocabularies.downorupworkflowagainvocabulary</property>
+   <property name="catalog"></property>
+   <property name="maxitems"></property>
+   <property name="sortreversed">0</property>
+   <property name="default"/>
+  </criterion>
+
+  <criterion name="c18" i18n:attributes="title">
+   <property name="widget">checkbox</property>
+   <property name="title">List type</property>
+   <property name="position">top</property>
+   <property name="section">advanced</property>
+   <property name="hidden">0</property>
+   <property name="count">0</property>
+   <property name="sortcountable">0</property>
+   <property name="hidezerocount">0</property>
+   <property name="index">listType</property>
+   <property name="operator">or</property>
+   <property name="operator_visible">0</property>
+   <property
+      name="vocabulary">Products.PloneMeeting.vocabularies.listtypesvocabulary</property>
    <property name="catalog"></property>
    <property name="maxitems"></property>
    <property name="sortreversed">0</property>
