@@ -2,8 +2,6 @@
 <object name="portal_factory" meta_type="Plone Factory Tool">
  <factorytypes>
   <type portal_type="MeetingItem"/>
-  <type portal_type="MeetingItemRecurring"/>
-  <type portal_type="MeetingItemTemplate"/>
   <type portal_type="Meeting"/>
   <type portal_type="MeetingCategory"/>
   <type portal_type="MeetingConfig"/>
